--- a/graphql-ssr-nextjs/package.json
+++ b/graphql-ssr-nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "axios": "^1.7.7",
     "graphql": "^16.9.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
